enironmental vars were used

--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,5 @@ PORT = 4000
 DATABASE_URL = mongodb://127.0.0.1:27017/newtestB
 JWT_SECRET_KEY = secret
 CORS_ORIGIN = *
+POST_LIMIT = 10
+USER_LIMIT = 10
