--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,7 @@
 PORT = 4000
 DATABASE_URL = mongodb://127.0.0.1:27017/newtestB
 JWT_SECRET_KEY = secret
-CORS_ORIGIN = *
+CORS_ORIGIN = http://localhost:3000
 POST_LIMIT = 10
 USER_LIMIT = 10
+AUTH_COOKIE_NAME = auth
