connected to the online mongo db

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT = 4000
-DATABASE_URL = mongodb://127.0.0.1:27017/newtestB
+DATABASE_URL = mongodb+srv://mern-stack-blog:vANatqY3fBP1JN92@mern-stack-blog.ctpdvmc.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET_KEY = secret
 CORS_ORIGIN = http://localhost:3000
 POST_LIMIT = 10
