--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,6 @@
 PORT = 4000
-DATABASE_URL = mongodb+srv://mern-stack-blog:vANatqY3fBP1JN92@mern-stack-blog.ctpdvmc.mongodb.net/?retryWrites=true&w=majority
-JWT_SECRET_KEY = secret
+DB_URL = mongodb+srv://mern-stack-blog:<password>@mern-stack-blog.ctpdvmc.mongodb.net/?retryWrites=true&w=majority
+DB_PASSWORD = vANatqY3fBP1JN92
 CORS_ORIGIN = http://localhost:3000
-POST_LIMIT = 10
-USER_LIMIT = 10
+JWT_SECRET_KEY = secret
 AUTH_COOKIE_NAME = auth
