--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,7 @@
+NODE_ENV = development
 PORT = 4000
 DB_URL = mongodb+srv://mern-stack-blog:<password>@mern-stack-blog.ctpdvmc.mongodb.net/?retryWrites=true&w=majority
 DB_PASSWORD = vANatqY3fBP1JN92
-CORS_ORIGIN = http://localhost:3000
+FRONTEND_URL = http://localhost:3000
 JWT_SECRET_KEY = secret
 AUTH_COOKIE_NAME = auth
